src/test/ui/issues/issue-33941.stderr
error[E0271]: type mismatch resolving `<std::collections::hash_map::Iter<'_, _, _> as Iterator>::Item == &_`
  --> $DIR/issue-33941.rs:6:36
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |                                    ^^^^^^ expected reference, found tuple
   |
   = note: expected reference `&_`
                  found tuple `(&_, &_)`
note: required by a bound in `cloned`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         Self: Sized + Iterator<Item = &'a T>,
   |                                ^^^^^^^^^^^^ required by this bound in `cloned`

error[E0277]: `Cloned<std::collections::hash_map::Iter<'_, _, _>>` cannot be converted to an iterator
  --> $DIR/issue-33941.rs:6:14
   |
LL |     for _ in HashMap::new().iter().cloned() {}
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cloned<std::collections::hash_map::Iter<'_, _, _>>` cannot be converted to an iterator
   |
   = help: the trait `IntoIterator` is not implemented for `Cloned<std::collections::hash_map::Iter<'_, _, _>>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0271, E0277.
For more information about an error, try `rustc --explain E0271`.
